<resources>
    <string name="app_name">DemoSuite</string>
    <string name="speechToText">SPEECH TO TEXT</string>
    <string name="textToSpeech">TEXT TO SPEECH</string>
    <string name="audio">AUDIO</string>
    <string name="video">VIDEO</string>
    <string name="animation">ANIMATION</string>
    <string name="play_audio">PLAY AUDIO</string>
    <string name="mic_text">Tap on mic to speak</string>
    <string name="text_speech">Hello Text to Speech Fragment!</string>
    <string name="speak_button">SPEAK</string>
    <string name="error_text">Not supported on this device</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
