<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucsb.cs.cs190i.brandonwicka.demosuite.MainActivity">

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/speechToText"
        android:layout_gravity="center"
        android:id="@+id/speech_to_text_button"
        />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/textToSpeech"
        android:layout_gravity="center"
        android:id="@+id/text_to_speech_button"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/audio"
        android:layout_gravity="center"
        android:id="@+id/audio_button"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/video"
        android:layout_gravity="center"
        android:id="@+id/video_button"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/animation"
        android:layout_gravity="center"
        android:id="@+id/animation_button"
        />

</LinearLayout>
